--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Dimension</h1>
-								<p>Countless words
-count less
-than the silent balance
-between yin and yang</p>
+								<p>
+									Countless words
+									count less 
+									than the silent balance
+									between yin and yang
+								</p>
 							</div>
 						</div>
 						<nav>
